--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>React App</title>
+    <title>CharityBay</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
